# internal/audit/schema/request.go
@@ -7,16 +7,16 @@ import (
 )
 
 type RequestAuditList struct {
-	Page         int       `form:"page" validate:"required,min=1"`
-	PageSize     int       `form:"page_size" validate:"required,min=1,max=100"`
-	From         time.Time `form:"from" validate:"omitempty"`
-	To           time.Time `form:"to" validate:"omitempty"`
-	Entity       string    `form:"entity" validate:"omitempty"`
-	Action       string    `form:"action" validate:"omitempty"`
-	AuthUserData *middleware.AuthUserData
+	Page         int                      `form:"page" validate:"required,min=1"`
+	PageSize     int                      `form:"page_size" validate:"required,min=1,max=100"`
+	From         time.Time                `form:"from" validate:"omitempty"`
+	To           time.Time                `form:"to" validate:"omitempty"`
+	Entity       string                   `form:"entity" validate:"omitempty"`
+	Action       string                   `form:"action" validate:"omitempty"`
+	AuthUserData *middleware.AuthUserData `swaggerignore:"true"`
 }
 
 type RequestAuditGet struct {
-	ID           string `uri:"id" validate:"required"`
-	AuthUserData *middleware.AuthUserData
+	ID           string                   `uri:"id" validate:"required" swaggerignore:"true"`
+	AuthUserData *middleware.AuthUserData `swaggerignore:"true"`
 }
