# internal/match/schema/response.go
@@ -1,28 +1,26 @@
 package schema
 
-import "time"
-
 type ResponseMatchCreate struct {
 	ID string `json:"id"`
 }
 
 type ResponseMatchGet struct {
-	ID         string    `json:"id"`
-	MatchDate  time.Time `json:"match_date"`
-	MatchTime  time.Time `json:"match_time"`
-	HomeTeamID string    `json:"home_team_id"`
-	AwayTeamID string    `json:"away_team_id"`
-	HomeScore  int       `json:"home_score"`
-	AwayScore  int       `json:"away_score"`
-	Status     string    `json:"status"`
+	ID         string `json:"id"`
+	MatchDate  string `json:"match_date"`
+	MatchTime  string `json:"match_time"`
+	HomeTeamID string `json:"home_team_id"`
+	AwayTeamID string `json:"away_team_id"`
+	HomeScore  int    `json:"home_score"`
+	AwayScore  int    `json:"away_score"`
+	Status     string `json:"status"`
 }
 
 type ResponseMatchItem struct {
-	ID         string    `json:"id"`
-	MatchDate  time.Time `json:"match_date"`
-	HomeTeamID string    `json:"home_team_id"`
-	AwayTeamID string    `json:"away_team_id"`
-	Status     string    `json:"status"`
+	ID         string `json:"id"`
+	MatchDate  string `json:"match_date"`
+	HomeTeamID string `json:"home_team_id"`
+	AwayTeamID string `json:"away_team_id"`
+	Status     string `json:"status"`
 }
 
 type ResponseMatchUpdate struct {
@@ -30,3 +28,7 @@ type ResponseMatchUpdate struct {
 }
 
 type ResponseMatchDelete struct{}
+
+type ResponseMatchUpdateStatus struct {
+	ID string `json:"id"`
+}
